# insura-ai

./: .dockerignore  .env.example  .gitignore  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  temporal-compose.yml
alembic/: env.py
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  alembic.ini  package.json  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 3908a879744b_fix_created_at_default.py  604f751d5b05_add_workflow_user_and_relationship_.py  7fac5ae0e6ed_add_updated_at_to_stage_runs.py  7fc246d7dcc3_add_workflow_name_to_workflows.py  a1b2c3d4e5f6_add_semantic_metadata_to_document_chunks.py  af125c9d90fb_add_stage_metadata_to_stage_runs.py  b2c3d4e5f6g7_add_citations_table.py  bdfe5b4439e5_add_workflow_query_model.py  c3d4e5f6g7h8_add_source_chunk_id_to_vector_embeddings.py  d3775e797d90_add_idempotency_keys_to_extractions_and_.py  d4e5f6g7h8i9_add_resolution_method_to_citations.py  e5f6g7h8i9j0_add_canonical_entity_id_to_vector_embeddings.py  ee9d8a7edede_add_document_name_col_to_documents_table.py  f2d4d5b1054b_add_vector_embeddings.py  fd3022570b79_replace_clerk_id_with_supabase_user_id.py
apps/backend/app/: main.py
apps/backend/app/api/specs/: citations.json  documents.json  health.json  query.json  users.json  workflows.json
apps/backend/app/api/v1/: __init__.py  router.py
apps/backend/app/api/v1/endpoints/: citations.py  documents.py  health.py  query.py  users.py  workflows.py
apps/backend/app/api/v1/middleware/: auth.py
apps/backend/app/core/: auth.py  base_stage.py  config.py  database.py  llm_client.py  neo4j_client.py  unified_llm.py
apps/backend/app/database/: models.py
apps/backend/app/models/: page_analysis_models.py  page_data.py
apps/backend/app/pipeline/: entity_resolution.py  ocr_extraction.py  page_analysis.py  table_extraction.py
apps/backend/app/prompts/: __init__.py  system_prompts.py
apps/backend/app/repositories/: base_repository.py  citation_repository.py  document_repository.py  entity_evidence_repository.py  entity_repository.py  page_analysis_repository.py  proposal_repository.py  section_chunk_repository.py  section_extraction_repository.py  stages_repository.py  user_repository.py  vector_embedding_repository.py  workflow_output_repository.py  workflow_repository.py
apps/backend/app/schemas/: __init__.py  citation.py  graph.py  query.py  sse_schemas.py
apps/backend/app/schemas/product/: extracted_data.py  policy_comparison.py  proposal_generation.py  quote_comparison.py  shared_workflow_schemas.py  synthesis_models.py
apps/backend/app/schemas/workflows/: request.py
apps/backend/app/services/: document_service.py  sse_manager.py  sse_messages.py  storage_service.py  user_service.py  workflow_service.py
apps/backend/app/services/citation/: __init__.py  citation_creation_service.py  citation_mapper.py  citation_resolution_service.py  citation_service.py
apps/backend/app/services/extracted/services/: document_type_classifier.py
apps/backend/app/services/product/: __init__.py
apps/backend/app/services/product/policy_comparison/: detailed_comparison_service.py  entity_comparison_service.py  entity_matcher_service.py  policy_comparison_service.py  preflight_validator.py
apps/backend/app/services/product/proposal_generation/: assembly_service.py  canonical_mapping_service.py  narrative_service.py  pdf_service.py  proposal_comparison_service.py  proposal_reasoning_service.py
apps/backend/app/services/product/quote_comparison/: coverage_quality_service.py  quote_comparison_service.py  reasoning_service.py
apps/backend/app/services/product/shared/: __init__.py  shared_comparison_service.py
apps/backend/app/services/retrieval/: __init__.py  constants.py  graphrag_service.py
apps/backend/app/services/retrieval/context/: context_formatter.py  hierarchical_builder.py  result_merger.py
apps/backend/app/services/retrieval/graph/: graph_expansion.py  graph_traverser.py  node_mapper.py  relevance_filter.py
apps/backend/app/services/retrieval/query_understanding/: __init__.py  entity_extractor.py  intent_classifier.py  query_expander.py  service.py
apps/backend/app/services/retrieval/response/: citation_formatter.py  generation_service.py
apps/backend/app/services/retrieval/vector/: __init__.py  reranker.py  (+1 more)
apps/backend/app/temporal/: __init__.py  worker.py
apps/backend/app/temporal/core/: __init__.py  discovery.py  workflow_registry.py
apps/backend/app/temporal/product/: __init__.py
apps/backend/app/utils/: canonical_key.py  json_parser.py  logging.py  relationship_config.py  responses.py  section_type_mapper.py
apps/backend/tests/: __init__.py
apps/backend/tests/api/: test_documents_workflow.py
apps/backend/tests/integration/: test_graph_service_integration.py  test_selective_ocr_integration.py
apps/backend/tests/services/pipeline/: __init__.py
apps/backend/tests/unit/chunking/: __init__.py  test_section_super_chunk_builder.py
apps/backend/tests/unit/extraction/: test_citation_propagation.py  test_endorsement_routing.py  test_extraction.py
apps/backend/tests/unit/pipeline/: test_docling_ocr_service.py  test_endorsement_continuation.py  test_page_analysis_markdown.py
apps/backend/tests/unit/repositories/: test_section_entity_persistence.py
apps/backend/tests/unit/retrieval/: __init__.py  conftest.py
apps/backend/tests/unit/services/: test_canonical_mapping_service.py  test_detailed_comparison_service.py  test_entity_comparison_consistency.py  test_entity_comparison_service.py  test_ocr_metadata_extraction.py  test_proposal_comparison_fallback_v2.py  test_quote_comparison_reasoning_service.py
apps/backend/tests/unit/synthesis/: __init__.py  conftest.py  test_base_coverage_inference.py  test_coverage_synthesizer.py  test_exclusion_synthesizer.py  test_pipeline_integration.py  test_synthesis_models.py  test_synthesis_orchestrator.py
apps/backend/tests/unit/utils/: test_section_type_mapper_endorsement.py
(+596 files in other folders)
