[project]
name = "insura-ai"
version = "0.1.0"
description = "AI-powered insurance document processing system with OCR capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "temporalio>=1.7.0",
    "greenlet>=3.2.4",
    "fpdf2>=2.7.0",
    "google-genai>=1.52.0",
    "pdfplumber>=0.11.0",
    "ollama>=0.6.1",
    "pgvector>=0.2.4",
    "sentence-transformers>=2.2.2",
    "neo4j>=5.14.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=42.0.0",
    "aiohttp>=3.9.0",
    "datasketch>=1.6.4",
    "email-validator>=2.1.0",
    "rapidfuzz>=3.6.1",
    "docling>=2.0.0",
    "tiktoken>=0.5.0",
    "weasyprint>=68.1",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.1",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "datamodel-code-generator>=0.25.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
